# flam-assignment-prince-singh

./: .gitignore  BUILD_NOTES.md  README.md  SUBMISSION_NOTE.md  gradlew  how_i_tested.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/princesingh/flam/: Camera2Controller.kt  GLRenderer.kt  ImageSaver.kt  MainActivity.kt  SaveHelper.kt  YuvUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
jni/: CMakeLists.txt  native_processor.cpp
web/: index.js  package.json
web/src/: index.html
